--- a/W2L5.example.html
+++ b/W2L5.example.html
@@ -16,6 +16,14 @@
       min-width: 100px;
       border: 1px solid black;
       border-radius: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    img {
+      /*max-width: 100%; */
+      width: 50px;
     }
   </style>
 
@@ -31,10 +39,21 @@
       <div style="background: indianred;" class="col-6">Second column</div>
     </div>
 
+    <!--.d{breakpoint}-{value} // d-md-inline -->
+    <p class="d-md-inline">
+      This is the first
+    </p>
+
+    <p class="d-md-inline">
+      This is the Second
+    </p>
+
     <!--div.row>div.col-sm-6.col-md-4.col-lg-3.col-xl-2.testbox*12. -->
 
-    <div class="row">
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 testbox"></div>
+    <div class="row no-gutters invisible">
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 testbox">
+        <img src="javascript-logo.jpg" alt="css logo" />
+      </div>
       <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 testbox"></div>
       <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 testbox"></div>
       <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 testbox"></div>
@@ -47,9 +66,19 @@
       <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 testbox"></div>
       <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 testbox"></div>
     </div>
+    <div class="d-none d-md-block mt-5 mb-0">
+      <h1 class="py-5">This will not appear on mobile</h1>
+      This text will be visible only from tablet on.
+      No mobiles allowed.
+      <h2 class="my-3">Some text</h2>
+      <span>Some more text</span>
+    </div>
+    <div class="d-block d-md-none">
+      <h2>This will appear on mobile</h2>
+      This text will be visible only on mobile.
+    </div>
   </div>
 
-  
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
