--- a/components.html
+++ b/components.html
@@ -26,8 +26,6 @@
         #special {
             font-weight: bolder;
         }
-
-        
     </style>
 </head>
 
@@ -74,6 +72,44 @@
     </nav>
     <!-- div.container>div.row -->
     <div class="container-fluid">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="screen_code.jpg" class="d-block w-100" alt="HTML code on computer screen">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>HTML coding</h5>
+                        <p>Learn to code - it's fun!</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="generic_logo.jpg" class="d-block w-100" alt="logo">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>We are hiring</h5>
+                        <p>Become a programmer - start today!</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="javascript-logo.jpg" class="d-block w-100" alt="js logo">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Become a JavaScript developer</h5>
+                        <p>Get ahead, learn JavaScript.</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4">Things we are learning</h1>
@@ -149,9 +185,36 @@
             </div>
             <textarea class="form-control" aria-label="Message"></textarea>
         </div>
-        <input type="submit" class="btn btn-primary btn-lg" value="Submit">
+        <!--<input type="submit" class="btn btn-primary btn-lg" value="Submit"> -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+            Submit
+        </button>
     </div>
 
+    <!-- Button trigger modal -->
+ 
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Understood</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Optional JavaScript -->
