--- a/components.html
+++ b/components.html
@@ -80,21 +80,21 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="screen_code.jpg" class="d-block w-100" alt="HTML code on computer screen">
+                    <img src="beiheng-guo-unsplash.jpg" class="d-block w-100" alt="HTML code on computer screen">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>HTML coding</h5>
                         <p>Learn to code - it's fun!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="generic_logo.jpg" class="d-block w-100" alt="logo">
+                    <img src="brennan-burling-unsplash.jpg" class="d-block w-100" alt="logo">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>We are hiring</h5>
                         <p>Become a programmer - start today!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="javascript-logo.jpg" class="d-block w-100" alt="js logo">
+                    <img src="tyler-casey-unsplash.jpg" class="d-block w-100" alt="js logo">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Become a JavaScript developer</h5>
                         <p>Get ahead, learn JavaScript.</p>
